--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -25,7 +25,7 @@
     </div>
 </nav>
 <br>
-<div class="container-fluid">
+<div>
     <div class="row">
         <div class="col-2">
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
@@ -123,10 +123,12 @@
                                                                        required>
                                                             </div>
                                                             <div class="modal-footer">
-                                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                                <input type="button" onclick="history.back();" value="back"/>
                                                                 <button class="btn btn-primary">Edit user</button>
                                                             </div>
                                                         </form>
+                                                    </div>
+                                                    <div class="modal-footer">
                                                     </div>
                                                 </div>
                                             </div>
