--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-<div class="container">
+<div>
     <div class="row">
-        <div class="col-sm-4 col-md-4 col-md-offset-4">
+        <div class="col-sm-5 col-md-2 col-md-offset-5">
             <br>
             <br>
             <br>
