--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -78,64 +78,71 @@
                                         <div class="modal fade" th:attr="id='modal'+${user.id}" id="myModal">
                                             <div class="modal-dialog">
                                                 <div class="modal-content">
-                                                    <div class="modal-header">
-                                                        <h4 class="modal-title">Edit user</h4>
-                                                        <button type="button" class="close" data-dismiss="modal">&times;
-                                                        </button>
-                                                    </div>
-                                                    <div class="modal-body" align="center">
-                                                        <form id="formUpdateUserModal" th:method="post"
-                                                              th:action="@{/users/update/{id}(id=${user.id})}">
-                                                            <div class="form-group input-group-sm">
-                                                                <label>ID</label>
-                                                                <input type="email" name="email"
-                                                                       th:value="${user.id}"
-                                                                       class="form-control input" disabled
-                                                                       required>
-                                                            </div>
-                                                            <div class="form-group input-group-sm">
-                                                                <label for="inputEmailUpdate">Email</label>
-                                                                <input type="email" name="email"
-                                                                       th:value="${user.email}"
-                                                                       id="inputEmailUpdate" class="form-control input"
-                                                                       required>
-                                                            </div>
-                                                            <div class="form-group input-group-sm">
-                                                                <label for="inputLoginUpdate">Login</label>
-                                                                <input type="text" name="login" th:value="${user.login}"
-                                                                       id="inputLoginUpdate" class="form-control input"
-                                                                       required>
-                                                            </div>
-                                                            <div class="form-group input-group-sm">
-                                                                <label for="inputPasswordUpdate">Password</label>
-                                                                <input type="text" name="password"
-                                                                       th:value="${user.password}"
-                                                                       id="inputPasswordUpdate"
-                                                                       class="form-control bbq_license input"
-                                                                       required>
-                                                            </div>
-                                                            <div>
-                                                                <select name="rolesNewUser" multiple required
-                                                                        placeholder="Role">
-                                                                    <option disabled>Choose role</option>
-                                                                    <div th:each="role : ${listRoles}">
-                                                                        <option th:value="${role.id}"
-                                                                                th:text="${role.role}"/>
-                                                                    </div>
-                                                                </select>
-                                                            </div>
-                                                            <div class="modal-footer">
-                                                                <button type="button" class="btn btn-default"
-                                                                        data-dismiss="modal">Close
-                                                                </button>
-                                                                <button class="btn btn-primary">Edit user</button>
-                                                            </div>
-                                                        </form>
-                                                    </div>
+                                                    <form id="modalForm">
+                                                        <div class="modal-header">
+                                                            <h4 class="modal-title">Edit user</h4>
+                                                            <button type="button" class="close" data-dismiss="modal">
+                                                                &times;
+                                                            </button>
+                                                        </div>
+                                                        <div class="modal-body" align="center">
+                                                            <form id="formUpdateUserModal" th:method="post"
+                                                                  th:action="@{/users/update/{id}(id=${user.id})}">
+                                                                <div class="form-group input-group-sm">
+                                                                    <label>ID</label>
+                                                                    <input type="email" name="email"
+                                                                           th:value="${user.id}"
+                                                                           class="form-control input" disabled
+                                                                           required>
+                                                                </div>
+                                                                <div class="form-group input-group-sm">
+                                                                    <label for="inputEmailUpdate">Email</label>
+                                                                    <input type="email" name="email"
+                                                                           th:value="${user.email}"
+                                                                           id="inputEmailUpdate"
+                                                                           class="form-control input"
+                                                                           required>
+                                                                </div>
+                                                                <div class="form-group input-group-sm">
+                                                                    <label for="inputLoginUpdate">Login</label>
+                                                                    <input type="text" name="login"
+                                                                           th:value="${user.login}"
+                                                                           id="inputLoginUpdate"
+                                                                           class="form-control input"
+                                                                           required>
+                                                                </div>
+                                                                <div class="form-group input-group-sm">
+                                                                    <label for="inputPasswordUpdate">Password</label>
+                                                                    <input type="text" name="password"
+                                                                           th:value="${user.password}"
+                                                                           id="inputPasswordUpdate"
+                                                                           class="form-control bbq_license input"
+                                                                           required>
+                                                                </div>
+                                                                <div>
+                                                                    <select name="rolesNewUser" multiple required
+                                                                            placeholder="Role">
+                                                                        <option disabled>Choose role</option>
+                                                                        <div th:each="role : ${listRoles}">
+                                                                            <option th:value="${role.id}"
+                                                                                    th:text="${role.role}"/>
+                                                                        </div>
+                                                                    </select>
+                                                                </div>
+                                                                <div class="modal-footer">
+                                                                    <button type="button" class="btn btn-default"
+                                                                            data-dismiss="modal">Close
+                                                                    </button>
+                                                                    <button type="button" id="modalButton" class="btn btn-primary form-group-item" data-dismiss="modal">
+                                                                        Edit user
+                                                                    </button>
+                                                                </div>
+                                                            </form>
+                                                        </div>
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
-
                                     </td>
                                 </tr>
                                 </th:forEach>
@@ -199,20 +206,6 @@
 <!-- Подключаем jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <!-- Подключаем Bootstrap JS -->
-<script src="js/bootstrap.min.js"></script>
-<script>
-    $('#myModal').on('show.bs.modal', function (event) {
-        var button = $(event.relatedTarget)
-        var login = button.data('login')
-        var email = button.data('email')
-        var password = button.data('password')
-        var role = button.data('role')
-        var modal = $(this)
-        modal.find('#username').val(login)
-        modal.find('#email').val(email)
-        modal.find('#password').val(password)
-        modal.find('#role').val(role)
-    })
-</script>
+<script src="js/style.js"></script>
 </body>
 </html>
