--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -53,7 +53,24 @@
                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
                              aria-labelledby="nav-home-tab">
                             <h5 class="px-3">All users</h5>
-                            <div id="usertable"></div>
+
+
+                            <table class="table table-striped table-sm table-bordered">
+                                <thead>
+                                <tr>
+                                    <th>Id</th>
+                                    <th>Роль</th>
+                                    <th>Логин</th>
+                                    <th>Пароль</th>
+                                    <th>Почта</th>
+                                    <th></th>
+                                    <th></th>
+                                </tr>
+                                </thead>
+                                <tbody id="userListHtml"></tbody>
+                            </table>
+
+
                         </div>
                         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                             <table class="table table-striped">
