--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -10,7 +10,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <script src="js/style.js"></script>
+    <script src="js/serializeToJSON.js" defer></script>
+    <script src="js/style.js" defer></script>
+
 
 </head>
 <body>
@@ -101,11 +103,11 @@
                                         </div>
                                         </select>
                                         </dl>
+                                    </form>
                                         <dl>
                                             <button class="btn btn-success" onclick="addUser()">Add new user</button>
                                         </dl>
                                         <th></th>
-                                    </form>
                                 </tr>
                             </div>
                         </div>
@@ -121,10 +123,6 @@
     </div>
 </div>
 
-<script src="css/style.css"></script>
-<script src="css/bootstrap-grid.css"></script>
-<!-- Подключаем jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<!-- Подключаем Bootstrap JS -->
 </body>
 </html>
