--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -97,7 +97,7 @@
                                                 <dd><input type="text" placeholder="Password" name="password"></dd>
                                             </dl>
                                             <dl>
-                                                <select name="rolesNewUser" multiple required placeholder="Role" id="roleListHtml">
+                                                <select name="roles" multiple required placeholder="Role" id="roleListHtml">
                                                 </select>
                                             </dl>
                                         </div>
