--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -123,6 +123,63 @@
     </div>
 </div>
 
+<div class="modal fade" id="updateUserModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Edit user</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;
+                </button>
+            </div>
+            <div class="modal-body" align="center">
+                <form id="formUpdateUserModal">
+                    <div class="form-group input-group-sm">
+                        <label for="id">ID</label>
+                        <input type="text" name="id"
+                               id="id"
+                               class="form-control input"
+                               required>
+                    </div>
+                    <div class="form-group input-group-sm">
+                        <label for="inputEmailUpdate">Email</label>
+                        <input type="email" name="email"
+                               id="inputEmailUpdate"
+                               class="form-control input"
+                               required>
+                    </div>
+                    <div class="form-group input-group-sm">
+                        <label for="inputLoginUpdate">Login</label>
+                        <input type="text" name="login"
+                               id="inputLoginUpdate"
+                               class="form-control input"
+                               required>
+                    </div>
+                    <div class="form-group input-group-sm">
+                        <label for="inputPasswordUpdate">Password</label>
+                        <input type="text" name="password"
+                               id="inputPasswordUpdate"
+                               class="form-control bbq_license input"
+                               required>
+                    </div>
+                    <div class="form-group input-group-sm">
+                        <label for="inputRoleUpdate">Role</label>
+                        <input type="text" name="roles"
+                               id="inputRoleUpdate"
+                               class="form-control input"
+                               required>
+                    </div>
+                </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default"
+                            data-dismiss="modal">Close
+                    </button>
+                    <button class="btn btn-primary" onclick="updateUser()">Edit user</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
