--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -137,7 +137,7 @@
                         <label for="id">ID</label>
                         <input type="number" name="id"
                                id="id"
-                               class="form-control input"
+                               class="form-control input" readonly
                                required>
                     </div>
                     <div class="form-group input-group-sm">
