--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -86,18 +86,18 @@
                                         <div class="align-content-center">
                                             <dl>
                                                 <dt>Email</dt>
-                                                <dd><input type="email" placeholder="Enter email" name="email"></dd>
+                                                <dd><input id="addUserEmail" type="email" placeholder="Enter email" name="email"></dd>
                                             </dl>
                                             <dl>
                                                 <dt>Login</dt>
-                                                <dd><input type="text" placeholder="Login" name="login"></dd>
+                                                <dd><input id="addUserLogin" type="text" placeholder="Login" name="login"></dd>
                                             </dl>
                                             <dl>
                                                 <dt>Password</dt>
-                                                <dd><input type="text" placeholder="Password" name="password"></dd>
+                                                <dd><input id="addUserPassword" type="text" placeholder="Password" name="password"></dd>
                                             </dl>
                                             <dl>
-                                                <select name="roles" multiple required placeholder="Role" id="roleListHtml">
+                                                <select id="roleListHtml" name="roles" multiple required placeholder="Role">
                                                 </select>
                                             </dl>
                                         </div>
