--- a/clientREST/src/main/resources/templates/users.html
+++ b/clientREST/src/main/resources/templates/users.html
@@ -135,7 +135,7 @@
                         <label for="id">ID</label>
                         <input type="number" name="id"
                                id="inputIdUpdate"
-                               class="form-control input"
+                               class="form-control input" readonly
                                required>
                     </div>
                     <div class="form-group input-group-sm">
